--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,6 +20,10 @@ jobs:
     needs: build
     runs-on: [aws-ec2]
     steps:
+      - name: Install Docker
+        run: |
+          sudo apt-get update
+          sudo apt-get install docker.io -y
       - name: Pull image from docker hub
         run: docker pull vinayraj739/nodejs-app:latest
       - name: Delete old container
