--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,6 +20,8 @@ jobs:
     needs: build
     runs-on: [aws-ec2]
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
       - name: Install Docker
         run: |
           sudo apt-get update
